--- a/azure-pipelines.sds.yml
+++ b/azure-pipelines.sds.yml
@@ -23,3 +23,4 @@ jobs:
   - template: templates/dotnet/publish-nuget-packages.yml@azTemplates
     parameters:
       nugetProjectPath: '**/AcceptanceTests.Common'
+      vstsFeed: 'Video Hearings/vh-packages'
