add conditional to get versions

--- a/azure-pipelines.sds.yml
+++ b/azure-pipelines.sds.yml
@@ -1,26 +1,47 @@
-trigger:
-  branches:
-    include:
-    - master
-pr:
-  - master
+parameters:
+  - name: nugetProjectPath
+    type: string
 
-resources:
-  repositories:
-    - repository: azTemplates
-      type: github
-      name: hmcts/azure-devops-templates
-      ref: dotnet-nuget-package
-      endpoint: hmcts
+  - name: packageVersion
+    type: string
+    default: ''
 
-pool:
-  vmImage: ubuntu-latest
+  - name: vstsFeed
+    type: string
 
-jobs:
-- job: Publish_Nuget_Packages
-  displayName: Pulbish Nuget Packages
-  steps:
-  - template: templates/dotnet/publish-nuget-packages.yml@azTemplates
-    parameters:
-      nugetProjectPath: '**/AcceptanceTests.Common'
-      vstsFeed: 'Video Hearings/vh-packages'
+steps:
+
+- ${{ if eq(parameters.packageVersion, '') }}:
+  - task: gitversion/setup@0
+    displayName: Install Git Version
+    inputs:
+      versionSpec: '5.6.0'
+      
+  - task: gitversion/execute@0
+    displayName: Run Git Version
+            
+- task: DotNetCoreCLI@2
+  displayName: dotnet restore
+  inputs:
+    command: restore
+    projects: ${{ parameters.nugetProjectPath }}/*.csproj
+    vstsFeed: ${{ parameters.vstsFeed }}
+    verbosityLevel: Minimal
+
+- task: DotNetCoreCLI@2
+  displayName: Create Build NuGet Project
+  inputs:
+    ${{ if eq(parameters.packageVersion, '') }}:
+      arguments: '--configuration release /p:Version="$(MajorMinorPatch)" /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)"'
+    ${{ else }}:
+      arguments: '--configuration release /p:Version="${{ parameters.packageVersion }}" /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)"'
+    versioningScheme: byBuildNumber
+    projects: '${{ parameters.nugetProjectPath }}/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: Push Package to VH NuGet Repo
+  inputs:
+    command: push
+    searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+    publishVstsFeed: ${{ parameters.vstsFeed }}
+    versioningScheme: byBuildNumber
