--- a/azure-pipelines.sds.yml
+++ b/azure-pipelines.sds.yml
@@ -10,7 +10,7 @@ resources:
     - repository: azTemplates
       type: github
       name: hmcts/azure-devops-templates
-      ref: dotnet-nuget-package
+      ref: master
       endpoint: hmcts
 
 pool:
