--- a/AcceptanceTests/AcceptanceTests.Common/AcceptanceTests.Common.csproj
+++ b/AcceptanceTests/AcceptanceTests.Common/AcceptanceTests.Common.csproj
@@ -11,6 +11,7 @@
     <Title>VH Acceptance Tests Common</Title>
     <Description>Common package for acceptance tests components.</Description>
     <UserSecretsId>7c8eafa9-e05a-410b-aec2-ce368a920a7f</UserSecretsId>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
