--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,10 @@ container: dotnetsdk
 
 
 steps:
-- task: gittools.gitversion.gitversion-task.GitVersion@5.6.0
+- task: gitversion/setup@0
   displayName: GitVersion
   inputs:
-    configFilePath: GitVersion.yml
+    versionSpec: '5.6.0'
 
 - task: DotNetCoreCLI@2
   displayName: Restore Dependencies
