--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,14 @@ container: dotnetsdk
 
 steps:
 - task: gitversion/setup@0
-  displayName: GitVersion
+  displayName: Install Git Version
   inputs:
     versionSpec: '5.6.0'
+
+- task: gitversion/execute@0
+  displayName: Run Git Version
+  inputs:
+    useConfigFile: false
 
 - task: DotNetCoreCLI@2
   displayName: Restore Dependencies
