--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,22 @@ container: dotnetsdk
 
 
 steps:
+- bash: |
+    shopt -s nullglob
+    function join_by { local IFS="$1"; shift; echo "$*"; }
+    lib_path=$(join_by ';' $(Agent.WorkFolder)/_tasks/GitVersion*/4.0.*/lib/linux/x86_64)
+    echo LD_LIBRARY_PATH: $lib_path
+    echo "##vso[task.setvariable variable=LD_LIBRARY_PATH]$lib_path"
+  displayName: Update LD_LIBRARY_PATH for GitVersion
+
+- task: gitversion/setup@0
+  displayName: Install Git Version
+  inputs:
+    versionSpec: '5.6.0'
+
+- task: gitversion/execute@0
+  displayName: Determine Version
+
 - task: DotNetCoreCLI@2
   displayName: Restore Dependencies
   inputs:
@@ -30,16 +46,6 @@ steps:
     projects: '**/AcceptanceTests.Common/*.csproj'
     vstsFeed: '${{ parameters.vstsFeed }}'
     verbosityRestore: Minimal
-    
-- task: gitversion/setup@0
-  displayName: Install Git Version
-  inputs:
-    versionSpec: '5.6.0'
-
-- task: gitversion/execute@0
-  displayName: Run Git Version
-  inputs:
-    useConfigFile: false
 
 - task: DotNetCoreCLI@2
   displayName: Create NuGet Package
