--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pr:
 resources:
   containers:
   - container: dotnetsdk
-    image: sspublicsbox.azurecr.io/vh/dotnet:6.0
+    image: sspublicsbox.azurecr.io/vh/dotnet:3.1.102
     endpoint: sspublicsbox
 
 pool:
@@ -22,13 +22,10 @@ pool:
 container: dotnetsdk
 
 steps:
-- task: gitversion/setup@0
-  displayName: Install Git Version
+- task: gittools.gitversion.gitversion-task.GitVersion@5
+  displayName: GitVersion
   inputs:
-    versionSpec: '5.10.3'
-
-- task: gitversion/execute@0
-  displayName: Determine Version
+    configFilePath: GitVersion.yml
 
 - task: DotNetCoreCLI@2
   displayName: Restore Dependencies
