--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,12 @@ pool:
 
 container: dotnetsdk
 
-√
+steps:
+- task: gittools.gitversion.gitversion-task.GitVersion@5
+  displayName: GitVersion
+  inputs:
+    configFilePath: GitVersion.yml
+
 - task: DotNetCoreCLI@2
   displayName: Restore Dependencies
   inputs:
